--- a/portfolio-project/style.css
+++ b/portfolio-project/style.css
@@ -49,12 +49,34 @@ header {
 }
 /* Styles For Header and Nav Section End */
 
-.hero-image {
-    height: 200px;
-    width: 100%;
+.hero-container {
+    position: relative;
 }
 
+.hero-container img {
+    max-width: 100%;
+    width: 100%;
+    height: 200px;
+}
+.hero-text {
+    position: absolute;
+    bottom: 50px;
+    right: 100px;
+    color: black;
+    font-size: 30px;
+    background-color: rgb(255, 255, 255, 80%);
+    padding: 5px;
+    margin: 5px;
+}
+
+/* }
 .hero-container h2{
     position: relative;
     color: red;
 }
+
+.hero-image {
+    height: 200px;
+    width: 100%;
+} */
+
