--- a/portfolio-project/style.css
+++ b/portfolio-project/style.css
@@ -37,11 +37,14 @@ header {
 
 .nav-items {
     list-style: none;
+
 }
 
 .nav-items li {
     display: inline-block;
     padding: 0px 20px;
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
 
 .nav-items li a:hover {
@@ -49,6 +52,7 @@ header {
 }
 /* Styles For Header and Nav Section End */
 
+/* Styles For Hero Section Starts*/
 .hero-container {
     position: relative;
 }
@@ -67,3 +71,41 @@ header {
     padding: 5px;
     margin: 5px;
 }
+/* Styles For Hero Section ends*/
+
+/* Styles For About Me Section Starts*/
+.aboutme-container {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+    /* border: 5px solid orange; */
+}
+
+.about-me {
+    width: 300px;
+    height: auto;
+    font-size: 50px;
+    text-align: right;
+    padding: 10px 20px;
+    border-right: 2px solid black;
+    /* background: blue;
+    border: 1px solid red; */
+}
+
+.aboutme-text {
+    width: auto;
+    height: auto;
+    padding: 10px 20px;
+    margin-left: 40px;
+    font-size: 20px;
+    line-height: normal;
+    letter-spacing: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+    /* background: blue; */
+    /* border: 1px solid red; */
+}
+
+/* Styles For About Me Section Ends*/
+
