--- a/portfolio-project/style.css
+++ b/portfolio-project/style.css
@@ -73,39 +73,46 @@ header {
 }
 /* Styles For Hero Section ends*/
 
-/* Styles For About Me Section Starts*/
-.aboutme-container {
-    width: 100%;
-    height: 200px;
+/* Flex Container Style Starts*/
+
+.flexbox-container {
     display: flex;
-    justify-content: space-between;
-    margin: 20px;
-    /* border: 5px solid orange; */
 }
 
-.about-me {
-    width: 300px;
-    height: auto;
-    font-size: 50px;
+.flexbox-item {
+    width: 200px;
+    margin: 10px;
+
+}
+
+/* About Me Section Style Starts*/
+
+.aboutme-item-1, .work-item-1, .contactme-item-1 {
+    min-height: 100px;
     text-align: right;
-    padding: 10px 20px;
-    border-right: 2px solid black;
-    /* background: blue;
-    border: 1px solid red; */
+    font-size: 50px;
+    border-right: 3px solid black;
+    padding-right: 10px;
 }
 
-.aboutme-text {
-    width: auto;
-    height: auto;
-    padding: 10px 20px;
-    margin-left: 40px;
-    font-size: 20px;
-    line-height: normal;
-    letter-spacing: 2px;
-    font-family: Arial, Helvetica, sans-serif;
-    /* background: blue; */
-    /* border: 1px solid red; */
+.aboutme-item-2 {
+    min-height: 200px;
+    flex-grow: 5;
+    font-size: 30px;
 }
 
-/* Styles For About Me Section Ends*/
+/* Work Section Style Starts*/
+
+.work-item-2 {
+    min-height: 800px;
+    flex-grow: 5;
+}
+
+/* Contact Me Section Style Starts*/
+
+.contactme-item-2 {
+    min-height: 200px;
+    flex-grow: 5;
+    font-size: 30px;
+}
 
