--- a/portfolio-project/style.css
+++ b/portfolio-project/style.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -52,6 +51,9 @@ header {
 }
 /* Styles For Header and Nav Section End */
 
+
+
+
 /* Styles For Hero Section Starts*/
 .hero-container {
     position: relative;
@@ -73,7 +75,10 @@ header {
 }
 /* Styles For Hero Section ends*/
 
-/* Flex Container Style Starts*/
+
+
+
+/* About Me & Flex Container Style Starts*/
 
 .flexbox-container {
     display: flex;
@@ -84,8 +89,6 @@ header {
     margin: 10px;
 
 }
-
-/* About Me Section Style Starts*/
 
 .aboutme-item-1, .work-item-1, .contactme-item-1 {
     min-height: 100px;
@@ -101,12 +104,36 @@ header {
     font-size: 30px;
 }
 
-/* Work Section Style Starts*/
+/* About Me & Flex Container Style Ends*/
 
-.work-item-2 {
-    min-height: 800px;
-    flex-grow: 5;
+/* Work Section Style Starts*/
+.work-container {
+    display: flex;
+    background-color: aqua;
+    min-height: 500px;
 }
+
+.workbox-item {
+    width: 200px;
+    margin: 10px;
+    background-color: red;
+}
+
+.workbox-item-1 {
+    min-height: 100px;
+    text-align: right;
+    font-size: 50px;
+    border-right: 3px solid black;
+    padding-right: 10px;
+    background-color: blueviolet;
+}
+
+.workbox-item-2 {
+    width: 300px;
+    height: 100px;
+}
+
+/* Work Section Style Ends*/
 
 /* Contact Me Section Style Starts*/
 
