Added Mockup boxes to Work Container

--- a/portfolio-project/style.css
+++ b/portfolio-project/style.css
@@ -90,7 +90,7 @@ header {
 
 }
 
-.aboutme-item-1, .work-item-1, .contactme-item-1 {
+.aboutme-item-1, .contactme-item-1 {
     min-height: 100px;
     text-align: right;
     font-size: 50px;
@@ -107,31 +107,70 @@ header {
 /* About Me & Flex Container Style Ends*/
 
 /* Work Section Style Starts*/
-.work-container {
+
+.container {
+
+    height: 800px;
     display: flex;
-    background-color: aqua;
-    min-height: 500px;
+    flex-wrap: wrap;
 }
 
-.workbox-item {
+.item-1 {
+    height: 800px;
     width: 200px;
-    margin: 10px;
-    background-color: red;
-}
-
-.workbox-item-1 {
-    min-height: 100px;
     text-align: right;
-    font-size: 50px;
-    border-right: 3px solid black;
     padding-right: 10px;
-    background-color: blueviolet;
+    padding-top: 5px;
+    font-size: 50px;
+    margin-left: 10px;
+    border-right: 3px solid black;
 }
 
-.workbox-item-2 {
-    width: 300px;
-    height: 100px;
+.box2 {
+    border: 2px solid red;
+    height: 300px;
+    width: 910px;
+    margin-left: 150px;
+    margin-top: 5px;
 }
+
+.box3 {
+    border: 2px solid red;
+    height: 150px;
+    width: 450px;
+    position: relative;
+    bottom: 450px;
+    left: 360px
+}
+
+.box4 {
+    border: 2px solid red;
+    height: 150px;
+    width: 450px;
+    position: relative;
+    bottom: 450px;
+    left: 360px;
+    margin-left: 10px;
+}
+
+.box5 {
+    border: 2px solid red;
+    height: 150px;
+    width: 450px;
+    position: relative;
+    bottom: 250px;
+    right: 550px;
+}
+
+.box6 {
+    border: 2px solid red;
+    height: 150px;
+    width: 450px;
+    position: relative;
+    bottom: 400px;
+    left: 370px;
+}
+
 
 /* Work Section Style Ends*/
 
