--- a/portfolio-project/style.css
+++ b/portfolio-project/style.css
@@ -63,6 +63,16 @@ header {
     width: 100%;
     height: 200px;
 }
+
+
+/* Personal Image */
+.JPG {
+    position: absolute;
+    bottom: 490px;
+    left: 213px;
+    width: 160px;
+}
+
 .hero-text {
     position: absolute;
     bottom: 50px;
@@ -97,6 +107,7 @@ header {
     border-right: 3px solid black;
     padding-right: 10px;
 }
+
 
 .aboutme-item-2 {
     min-height: 200px;
