--- a/docs/style.css
+++ b/docs/style.css
@@ -1,250 +1,208 @@
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-   
 }
 
-/* Styles For Header and Nav Section */
-h1 {
-    font-size: 50px;
-    color: black;
-    border: 10px solid white;
-    background-color: white;
-    cursor: pointer;
-    margin-right: auto;
-    position: relative;
-    right: 150px;
-
-}
+/* Nav & Logo Style Starts Section Starts  */
 
 li, a {
     font-family: sans-serif;
-    font-weight: 100;
-    font-size: 22px;
-    color: #edf0f1;
+    font-weight: 500;
+    font-size: 20px;
+    color: black;
     text-decoration: none;
 }
 
 header {
-    background-color: black;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
-    padding: 20px 10%;
+    padding: 30px 10%;
 }
 
-.nav-items {
+.logo {
+    cursor: pointer;
+    margin-right: auto;
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
+
+.nav-bar {
     list-style: none;
-
 }
 
-.nav-items li {
+.nav-bar li {
     display: inline-block;
-    padding: 0px 20px;
-    text-decoration: underline;
-    text-underline-offset: 5px;
+    padding: 15px 20px;
 }
 
-.nav-items li a:hover {
-    color: aqua;
-}
-/* Styles For Header and Nav Section End */
-
-
-
-
-/* Styles For Hero Section Starts*/
-.hero-container {
-    position: relative;
+.nav-bar li a:hover {
+    color: green;
 }
 
-.hero-container img {
-    width: 100%;
+/* Nav & Logo Style Starts Section Ends  */
+
+/* Hero Section Starts  */
+
+.hero {
     height: 200px;
+    background-image: url(./Images/hero.jpg);
+    background-position: 40% 30%;
+    margin: 50px 50px;
 }
 
+.port {
+    text-align: right;
+    font-size: 50px;
+    color: white;
+    padding-top: 90px;
+    padding-right: 20px;
+    font-weight: bold;
+}
 
-/* Personal Image */
 .JPG {
-    position: absolute;
-    bottom: 490px;
-    left: 213px;
-    width: 110px;
+    margin: auto;
+    display: block;
+    padding-bottom: 10px;
 }
 
-.hero-text {
-    position: absolute;
-    bottom: 50px;
-    right: 100px;
-    color: black;
-    font-size: 30px;
-    background-color: rgb(255, 255, 255, 80%);
-    padding: 5px;
-    margin: 5px;
-}
-/* Styles For Hero Section ends*/
+/* Hero Section Ends  */
 
+/* About Me Section Starts  */
 
-
-
-/* About Me & Flex Container Style Starts*/
-
-.flexbox-container {
-    display: flex;
+.container1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
-.flexbox-item {
-    width: 200px;
-    margin: 10px;
-
+.container1 div {
+    padding: 10px;
 }
 
-.aboutme-item-1, .contactme-item-1 {
-    min-height: 100px;
+.item1 {
+   max-width: 500px;
+   height: 200px;
+   text-align: right;
+   font-size: 70px;
+   font-weight: bold;
+}
+
+.item2 {
+    grid-column: span 4;
+    font-size: 40px;
+    border-left: 3px solid black;
+}
+/* About Me Section Ends  */
+
+/* Work Section Starts  */
+.container2 {
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(5 1fr);
+    max-width: 1300px;
+}
+
+.work {
+    width: 295px;
+    grid-column-start: -6;
+    grid-row-start: 1;
+    grid-row-end: 4;
     text-align: right;
-    font-size: 50px;
-    border-right: 3px solid black;
+    font-size: 70px;
+    font-weight: bold;
     padding-right: 10px;
-}
-
-
-.aboutme-item-2 {
-    min-height: 200px;
-    flex-grow: 5;
-    font-size: 30px;
-}
-
-/* About Me & Flex Container Style Ends*/
-
-/* Work And Each Box Section Style Starts*/
-
-.container {
-
-    height: 800px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.item-1 {
-    height: 800px;
-    width: 200px;
-    text-align: right;
-    padding-right: 10px;
-    padding-top: 5px;
-    font-size: 50px;
-    margin-left: 10px;
     border-right: 3px solid black;
 }
 
-.box2 {
-    border: 2px solid black;
-    height: 300px;
-    width: 910px;
-    margin-left: 150px;
-    margin-top: 5px;
+.surf-report {
+    grid-column-start: -5;
+    grid-column-end: -1;
+    height: 200px;
     background-image: url(./Images/placeholder-image1.jpg);
     background-position: 50% 50%;
-    font-size: 30px;
-    color: black;
-    font-weight: bold;
+    right: 200px;
     opacity: 0.6;
 }
 
-.box3 {
-    border: 2px solid black;
-    height: 150px;
-    width: 450px;
-    position: relative;
-    bottom: 450px;
-    left: 360px;
-    font-size: 30px;
+.led-wall {
+    grid-column-start: -5;
+    grid-column-end: -3;
+    height: 100px;
     background-image: url(./Images/ruby1.jpg);
     background-position: 50% 50%;
-    color: black;
-    font-weight: bold;
     opacity: 0.6;
- }
+}
 
-.box4 {
-    border: 2px solid black;
-    height: 150px;
-    width: 450px;
-    position: relative;
-    bottom: 450px;
-    left: 360px;
-    margin-left: 10px;
-    font-size: 30px;
+.JavaScript {
+    grid-column-start: -3;
+    grid-column-end: -1;
+    height: 100px;
     background-image: url(./Images/javascript-illustration.jpg);
     background-position: 90% 50%;
-    color: black;
-    font-weight: bold;
     opacity: 0.6;
 }
 
-.box5 {
-    border: 2px solid black;
-    height: 150px;
-    width: 450px;
-    position: relative;
-    bottom: 250px;
-    right: 550px;
-    font-size: 30px;
+.Caculator {
+    grid-column-start: -5;
+    grid-column-end: -3;
+    height: 100px;
     background-image: url(./Images/caculator.jpg);
     background-position: 50% 40%;
-    color: black;
-    font-weight: bold;
     opacity: 0.6;
 }
 
-.box6 {
-    border: 2px solid black;
-    height: 150px;
-    width: 450px;
-    position: relative;
-    bottom: 400px;
-    left: 820px;
-    font-size: 30px;
-    background-image: url(./Images/placeholder3.jpg);
+.run-buddy{
+    grid-column-start: -3;
+    grid-column-end: -1;
+    height: 100px;background-image: url(./Images/placeholder3.jpg);
     background-position: 50% 40%;
-    color: black;
-    font-weight: bold;
     opacity: 0.6;
 }
 
-
-.box2:hover, .box3:hover,.box4:hover, .box5:hover, .box6:hover {
+.work:hover, .surf-report:hover, .led-wall:hover, .JavaScript:hover, .Caculator:hover, .run-buddy:hover{
     opacity: 1;
     cursor: pointer;
 }
+/* Work Section Ends  */
 
-/* Work And Each Box Section Style Ends*/
-
-/* Contact Me Section Style Starts*/
-
-.contactme-item-2 {
-    min-height: 200px;
-    flex-grow: 5;
-    font-size: 30px;
+/* Contact Section Starts */
+.container3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    height: 200px;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
-.contactme-nav {
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-    padding-top: 50px;
-    text-decoration: underline;
-    text-underline-offset: 5px;
+.Contact {
+   text-align: right;
+   font-size: 70px;
+   font-weight: bold;
+   border-right: 3px solid black;
+   padding-right: 10px;
+   padding-left: 25px;
 }
 
-.contactme-nav li a {
-    color: black;
-    font-size: 40px;
+.footer-items {
+    display: grid;
+    text-align: center;
+    padding-top: 40px;
+    font-weight: bold;
+    font-size: 20px;
+}
+.footer-items:hover {
+    color: green;
 }
 
-.contactme-nav li a:hover {
-    color: aqua;
-}
-/* Contact Me Section Style Ends*/
-
+/* Contact Section Ends */
 
