Updat with Employee Project

--- a/docs/style.css
+++ b/docs/style.css
@@ -135,8 +135,8 @@ header {
     grid-column-start: -5;
     grid-column-end: -3;
     height: 100px;
-    background-image: url(./Images/ruby1.jpg);
-    background-position: 50% 50%;
+    background-image: url(./Images/employee.jpg);
+    background-position: 20% 50%;
     opacity: 0.6;
 }
 
